[package]
name = "geomorpher"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# TODO REMOVE dynamic_linking when release
bevy = "0.10.0" #{ version="0.10.1", features=["dynamic_linking"] }
bevy_math = "*"
glam = "0.23.0"
bevy-inspector-egui = "*"
bevy_rapier2d = { version = "*", features = [ "simd-stable", "debug-render-2d" ] }
particular = "0.5.0"
bevy_mouse_tracking_plugin = "0.3.1"

[profile.dev]
opt-level = 1

[profile.dev.package.bevy_rapier2d]
opt-level = 3

[profile.dev.package."*"]
opt-level = 3
